# ccg-tui

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: record_readme_demo.py
src/ccg_tui/: app.py  capabilities.py  handoff.py  models.py  resume_context.py  routing_capabilities.py  session.py  slash_commands.py  summary.py  transcript.py
src/ccg_tui/backends/: __init__.py  antigravity.py  base.py  claude.py  codex.py  gemini.py  pty_transport.py
tests/: test_app.py  test_capabilities.py  test_handoff.py  test_resume_context.py  test_routing_capabilities.py  test_session.py  test_slash_commands.py  test_summary.py  test_transcript.py
tests/backends/: test_antigravity.py  test_claude.py  test_codex.py  test_contract_fixtures.py  test_fake_backend.py  test_gemini.py
tests/backends/fixtures/: antigravity_failure.jsonl  antigravity_success.txt  claude_success.jsonl  claude_tool_and_failure.jsonl  codex_activity_and_failure.jsonl  codex_success.jsonl  gemini_direct_tool_use.jsonl  gemini_success.jsonl  gemini_tool_and_auth_failure.jsonl
tests/tui/: conftest.py  test_fullscreen_smoke.py  tui_harness.py
